force-app/main/default/objects/BGBL__Applied_Query__c/fields/BGBL__Attachment_To_Object__c.field-meta.xml
<CustomField>
    <fullName>BGBL__Attachment_To_Object__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This assigned query object is the object the letter will attach to</inlineHelpText>
    <label>Attach</label>
    <type>Checkbox</type>
</CustomField>