force-app/main/default/objects/BGBL__Applied_Query__c/fields/BGBL__Iterate_Parent_Lookup__c.field-meta.xml
<CustomField>
    <fullName>BGBL__Iterate_Parent_Lookup__c</fullName>
    <description>Field API Name of the lookup to the primary parent (record being attached to).</description>
    <inlineHelpText>Field API Name of the lookup to the primary parent (record being attached to).</inlineHelpText>
    <label>Iterate Parent Lookup</label>
    <length>50</length>
    <type>Text</type>
</CustomField>