force-app/main/default/objects/BGBL__Applied_Query__c/fields/BGBL__Parent_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>BGBL__Parent_Record_Type_Name__c</fullName>
    <description>Parent RecordType name. Useful when recordtypes are distinct from one another, and configured letters do not make sense for other record types.</description>
    <label>Parent Record Type Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>