force-app/main/default/objects/BGBL__Applied_Query__c/fields/BGBL__Select_Fields__c.field-meta.xml
<CustomField>
    <fullName>BGBL__Select_Fields__c</fullName>
    <inlineHelpText>Field values to display when giving user to choose one or many letter copies for. This field is case-sensitive and its values must be identical to the field API names. eg. MUSW__Contact__r.Name, MUSW__Contact__r.MailingStreet</inlineHelpText>
    <label>Child Select Fields</label>
    <type>TextArea</type>
</CustomField>