force-app/main/default/objects/BGBL__Applied_Query__c/validationRules/BGBL__Child_Iterate_Query_must_not_have_parent.validationRule-meta.xml
<ValidationRule>
    <fullName>BGBL__Child_Iterate_Query_must_not_have_parent</fullName>
    <active>true</active>
    <errorConditionFormula>AND(BGBL__Child_Iterate_Query__c , NOT(ISBLANK(BGBL__Parent_Query__c )))</errorConditionFormula>
    <errorMessage>This is a Child Iterate Query, do not specify Parent Query</errorMessage>
</ValidationRule>