force-app/main/default/objects/BGBL__Applied_Query__c/validationRules/BGBL__Order_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>BGBL__Order_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(BGBL__Execution_Order__c, &quot;&quot;)</errorConditionFormula>
    <errorMessage>Order is Required. Please indicate order in which this query should be run. If no other queries, indicate 1. If more than one, make sure each applied query is uniquely ordered (parents are first).</errorMessage>
</ValidationRule>