force-app/main/default/objects/BGBL__Applied_Query__c/validationRules/BGBL__Parent_Query_without_relationship_name.validationRule-meta.xml
<ValidationRule>
    <fullName>BGBL__Parent_Query_without_relationship_name</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT(ISBLANK(BGBL__Parent_Query__c )),ISBLANK( BGBL__Object_Name_Plural__c  ))</errorConditionFormula>
    <errorDisplayField>BGBL__Object_Name_Plural__c</errorDisplayField>
    <errorMessage>Object Name (Plural) is Required when Parent Query is specified. Eg. MUSW__Fees__r</errorMessage>
</ValidationRule>